# TelegramBotZoo

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
en_collector/: __main__.py  api.py  env.py  telegram.py
en_collector/database/: __init__.py  tables.py
migration/: env.py
migration/versions/: 125642c284ae_initial.py  14a25f013f5b_init_logs.py  5a8664d54847_change_column_name_to_created_at_in_logs.py  5c2ca8638b66_init_version.py  8317c251812e_add_source_column_in_logs.py  c542c3d73310_alpha_version.py  eb26f2c4b869_add_chat_id.py
telegram_bot_zoo/: __main__.py  api.py  containers.py  env.py  logger.py
telegram_bot_zoo/bots/encollector/: __init__.py  context.py
telegram_bot_zoo/bots/encollector/handlers/: add.py  models.py  random.py
telegram_bot_zoo/clients/: client.py  ya_dictionary.py  ya_translator.py
telegram_bot_zoo/database/: __init__.py  logs.py  repo.py  tables.py
telegram_bot_zoo/database/models/: word_info.py
telegram_bot_zoo/models/: base_model.py  response.py
